# gapr

./: .gitattributes  .gitignore  CMakeLists.txt  README.adoc  meson.build  meson_options.txt
android/: settings.gradle
data/: app.appdata.xml.in  app.desktop.in.in  meson.build
data/icons/: icons.qrc  index.theme
doc/: manual.adoc
doc/licenses/: COPYING.adoc  LICENSE.mit  LICENSE.oldap2.8  meson.build
packaging/: Containerfile  Containerfile.containerignore  Info.plist.in  exec-wrapper.in  fix-bundle-linux.py  fix-bundle-macos.py  fix-bundle-windows.py  fix_bundle.py  flatpak-manifest.yaml  icon.icns  installer.nsi.in  intl-reloc.c  libs-freedesktop  meson.build
po/: POTFILES.in  meson.build  zh_CN.po
source/: CMakeLists.txt  config.hh.in  logger.cc  meson.build
source/brief/: dist-test.cc  dist.cc  dist.hh  f1s.cc  f1s.hh  main.cc  meson.build  util.hh
source/convert/: c-api.h  cache-helper.hh  decode-webm.cc  dshelper.cc  dshelper.hh  loadtiff.cc  loadtiff.hh  logger.h  main.cc  mem-str.hh  mem_file_body.hh  meson.build  nethelper.cc  nethelper.hh  savewebm.cc  savewebm.hh  split-plugin.cc  split.cc  split.hh  tifftiled.cc
source/corelib/: CMakeLists.txt  acceptor.cc  archive.cc  asio-src.cc  buffer.cc  conn-h2.cc  connection.cc  cube-builder.cc  cube-cache.cc  cube-loader.cc  cube.cc  curl-wrappers.hh  downloader.cc  edge-model.cc  fiber.cc  filter.cc  gapr-core.pc.in  libc-wrappers.hh  manifest.dep.in  manifest.dep.rc.in  manifest.in  mem-file-cache.cc  meson.build  model-upgrade.hh  model.cc  options.cc  parse-helper.hh  parser.cc  plugin-helper.hh  plugin-loader.cc  program.cc  promise.cc  stream.hh  streambuf.cc  swc-helper.cc  trace-api.cc  utility.cc  version.rc.in  windows-compat.hh
source/corelib/detail/: asio-misc.cc  connection.unit-test.hh  cube-loader-hevc.cc  cube-loader-nrrd.cc  cube-loader-tiff.cc  cube-loader-v3d.cc  cube-loader-vp9.cc  dlfcn.c  file-stream.hh
source/corelib/dup/: save-load-helper.hh  serialize-delta.hh
source/corelib/gapr/: acceptor.hh  affine-xform.hh  archive.hh  ask-secret.hh  bbox.hh  buffer-view.hh  buffer.hh  commit.hh  config.hh  connection.hh  cube-builder.hh  cube-loader.hh  cube.hh  downloader.hh  edge-model.hh  exception.hh  fiber.hh  fix-error-code.hh  fixes.hh  future.hh  likely.hh  mem-file.hh  meson.build  model.hh  mt-safety.hh  node-allocator.hh  options.hh  parser.hh  plugin-loader.hh  plugin.hh  program.hh  serializer.hh  str-glue.hh  streambuf.hh  swc-helper.hh  timer.hh  trace-api.hh  utility.hh  vec3.hh  version.hh.in
source/corelib/gapr/detail/: ascii-tables.hh  cb-wrapper.hh  connection.hh  delta-stats.hh  executor-lock.hh  finally.hh  fix-boost-asio.hh  fixed-point.hh  mini-float.hh  model-props.hh  nrrd-output.hh  scoped-fence.hh  serializer.hh  streambuf.hh  template-class-static-data.hh  zlib-stream.hh
source/export/: CMakeLists.txt  main.cc  meson.build
source/fix/: CMakeLists.txt  canvas-helper.hh  canvas.hh  compute.cc  compute.hh  dialog-alt.hh  dialog.hh  fix.qrc  flow.dot  main.cc  meson.build  misc.cc  misc.hh  model-misc.hh  neuron-list.cc  neuron-list.hh  session-impl.hh  session.hh  state-manager.hh  vertex-array-manager.hh  window.cc  window.hh
source/fix/glsl/: edge.geom  edge.pr.frag  edge.pr.geom  edge.pr.vert  edge.vert  line.frag  line.geom  line.vert  line2.frag  line2.vert  mark.frag  mark.geom  mark.vert  mesh.frag  sort.frag  sort.pr.frag  sort.vert  vert.frag  vert.vert  volume.frag
source/fix/translations/: fix.zh_CN.ts  meson.build
source/fix/ui/: dlg-channels.ui  dlg-create-neuron.ui  dlg-error-state.ui  dlg-property.ui  dlg-quality.ui  dlg-rename-neuron.ui  dlg-select-type.ui  win-main.ui
source/gather/: CMakeLists.txt  env.cc  env.hh  main.cc  meson.build  model.cc  model.hh  send-recv-file.hh  server.cc  server.hh  stats.hh  stop-signal.hh
source/gather/docroot/: admin.html  index.html  locked.html  login.html  progress.html  rank.html  register.html
source/gather/helpers/: upgrade-repo.cc
source/glsl/: edge2.frag  line2.geom  vert2.vert
source/guilib/: CMakeLists.txt  about-dialog.cc  about-dialog.hh  application.cc  dialogs.cc  login-dialog.cc  manifest.dep.in  manifest.dep.rc.in  manifest.in  manifest.rc.in  meson.build  program.cc  range-widget.cc  utility.cc
source/guilib/gapr/gui/: application.hh  dialogs.hh  login-dialog.hh  opengl-funcs.hh  opengl-impl.hh  opengl.hh  program.hh  range-widget.hh  utility.hh
source/guilib/translations/: meson.build  zh_CN.ts
source/guilib/ui/: dlg-about.ui  dlg-login.ui  dlg-secret.ui  wid-range-slave.ui  wid-range.ui
source/map/: decimate.cc  main.cc  map.hh  meson.build
source/proofread/: CMakeLists.txt  canvas-helper.hh  canvas.cc  canvas.hh  main.cc  meson.build  window.cc  window.hh
source/proofread/translations/: fix-lite.zh_CN.ts  meson.build
source/proofread/ui/: dlg-display.ui  dlg-node-state.ui  win-main.ui
source/show/: CMakeLists.txt  gresource.xml  gtk.hh  main.cc  meson.build  window.cc  window.hh
source/show/glsl/: mesh.vert  sort.frag  sort.vert  vert.frag  vert.geom  volume.frag  volume.vert
source/show/ui/: help-overlay.ui  menus.ui  style.css  window.ui
source/start/: CMakeLists.txt  main.cc  meson.build  start-window.cc  start-window.hh
source/start/translations/: meson.build  start.zh_CN.ts
source/start/ui/: win-start.ui
source/trace/: CMakeLists.txt  compute-common.cc  compute-dumb.cc  compute-neutube.cc  compute.hh  detector-torch-unet.cc  detector-train.cc  evaluator-dlib.cc  evaluator-dumb.cc  evaluator-torch-resnet.cc  evaluator-train.cc  evaluator.hh  main.cc  meson.build  neutube-helper.cc  reset-proofread.cc  torch-helpers.hh  torch-networks.cc  torch-networks.hh  utils.cc  utils.hh
subprojects/: boost.wrap  jctvc-hm.wrap  liblmdb.wrap  libvpx.wrap  libwebm.wrap  lua.wrap  neutube.wrap
subprojects/packagefiles/boost/: meson.build
utilities/: boost.cmake  build-flatpak.sh  build-macos-package.sh  build-windows-package.sh  check-charconv.cc  check-cpp17.cc  jctvc-hm-fix.patch  jctvc-hm.cmake  libcurl.cmake  liblmdb.cmake  libtiff.cmake  (+4 more)
(+50 files in other folders)
